--- a/src/main/resources/com/example/airlinecompanymanagment/Employees.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Employees.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -46,7 +47,7 @@
       <TextField fx:id="lastnameInput" layoutX="192.0" layoutY="23.0" promptText="Last Name" />
       <TextField fx:id="birthInput" layoutX="360.0" layoutY="23.0" promptText="Birth date" />
       <TextField fx:id="emailInput" layoutX="360.0" layoutY="63.0" promptText="Email" />
-      <TextField fx:id="departmentInput" layoutX="524.0" layoutY="24.0" promptText="DepartmentID" />
       <TextField fx:id="salaryInput" layoutX="524.0" layoutY="64.0" promptText="Salary" />
+      <ComboBox fx:id="combo" layoutX="523.0" layoutY="23.0" prefWidth="150.0" promptText="Department ID" />
    </children>
 </AnchorPane>
