--- a/src/main/resources/com/example/airlinecompanymanagment/Flight.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Flight.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -11,7 +12,7 @@
 
 <AnchorPane prefHeight="711.0" prefWidth="959.0" style="-fx-background-color: #212121;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.airlinecompanymanagment.controllers.FlightController">
    <children>
-      <TableView fx:id="tab" layoutX="14.0" layoutY="156.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="542.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
+      <TableView fx:id="tab" layoutX="88.0" layoutY="156.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="542.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
          <columns>
             <TableColumn fx:id="datedepartcol" prefWidth="111.199951171875" text="Date departure" />
             <TableColumn fx:id="datearrivalcol" prefWidth="112.79998779296875" text="Date arrival" />
@@ -20,12 +21,11 @@
             <TableColumn fx:id="airplanecol" prefWidth="94.39999999999998" text="Airplane" />
          </columns>
       </TableView>
-      <TextField fx:id="departinput" layoutX="26.0" layoutY="25.0" promptText="Date Departure" />
-      <TextField fx:id="airportinput" layoutX="109.0" layoutY="63.0" promptText="Airport" />
-      <Button fx:id="addbtn" layoutX="144.0" layoutY="102.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Add" textFill="WHITE" />
-      <Button fx:id="deletebtn" layoutX="326.0" layoutY="102.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #722f37;" styleClass="btn" text="Delete" textFill="WHITE" />
-      <Button fx:id="modifybtn" layoutX="236.0" layoutY="102.0" mnemonicParsing="false" onAction="#onModify" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Modify" textFill="WHITE" />
-      <Pane layoutX="526.0" layoutY="22.0" prefHeight="108.0" prefWidth="168.0" style="-fx-background-color: #0D7377;" styleClass="statsPane">
+      <TextField fx:id="departinput" layoutX="100.0" layoutY="25.0" promptText="Date Departure" />
+      <Button fx:id="addbtn" layoutX="218.0" layoutY="102.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Add" textFill="WHITE" />
+      <Button fx:id="deletebtn" layoutX="400.0" layoutY="102.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #722f37;" styleClass="btn" text="Delete" textFill="WHITE" />
+      <Button fx:id="modifybtn" layoutX="310.0" layoutY="102.0" mnemonicParsing="false" onAction="#onModify" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Modify" textFill="WHITE" />
+      <Pane layoutX="600.0" layoutY="22.0" prefHeight="108.0" prefWidth="168.0" style="-fx-background-color: #0D7377;" styleClass="statsPane">
          <children>
             <Text fx:id="nbA" fill="WHITE" layoutX="70.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="10" wrappingWidth="33.336669921875">
                <font>
@@ -39,8 +39,9 @@
             </Text>
          </children>
       </Pane>
-      <TextField fx:id="arrivalinput" layoutX="192.0" layoutY="25.0" promptText="Date Arrival" />
-      <TextField fx:id="airplaneinput" layoutX="275.0" layoutY="63.0" promptText="Airplane" />
-      <TextField fx:id="destinationinput" layoutX="354.0" layoutY="25.0" promptText="Destination" />
+      <TextField fx:id="arrivalinput" layoutX="266.0" layoutY="25.0" promptText="Date Arrival" />
+      <TextField fx:id="destinationinput" layoutX="428.0" layoutY="25.0" promptText="Destination" />
+      <ComboBox fx:id="combo1" layoutX="191.0" layoutY="64.0" prefWidth="150.0" promptText="Airport ID" />
+      <ComboBox fx:id="combo2" layoutX="368.0" layoutY="64.0" prefWidth="150.0" promptText="Airplane ID" />
    </children>
 </AnchorPane>
