--- a/src/main/resources/com/example/airlinecompanymanagment/Ticket.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Ticket.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -11,20 +12,18 @@
 
 <AnchorPane prefHeight="711.0" prefWidth="959.0" style="-fx-background-color: #212121;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.airlinecompanymanagment.controllers.TicketsController">
    <children>
-      <TableView fx:id="tab" layoutX="14.0" layoutY="156.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="340.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
+      <TableView fx:id="tab" layoutX="171.0" layoutY="156.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="340.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
          <columns>
             <TableColumn fx:id="pricecol" prefWidth="111.199951171875" text="Price" />
             <TableColumn fx:id="clientcol" prefWidth="112.79998779296875" text="Client" />
             <TableColumn fx:id="flightcol" prefWidth="115.20001220703125" text="Flight" />
          </columns>
       </TableView>
-      <TextField fx:id="priceInput" layoutX="109.0" layoutY="25.0" promptText="Price" />
-      <TextField fx:id="clientInput" layoutX="26.0" layoutY="63.0" promptText="Client" />
-      <TextField fx:id="flightInput" layoutX="193.0" layoutY="63.0" promptText="Flight" />
-      <Button fx:id="addbtn" layoutX="53.0" layoutY="104.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Add" textFill="WHITE" />
-      <Button fx:id="deletebtn" layoutX="235.0" layoutY="104.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #722f37;" styleClass="btn" text="Delete" textFill="WHITE" />
-      <Button fx:id="modifybtn" layoutX="145.0" layoutY="104.0" mnemonicParsing="false" onAction="#onModify" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Modify" textFill="WHITE" />
-      <Pane layoutX="380.0" layoutY="22.0" prefHeight="108.0" prefWidth="168.0" style="-fx-background-color: #0D7377;" styleClass="statsPane">
+      <TextField fx:id="priceInput" layoutX="266.0" layoutY="25.0" promptText="Price" />
+      <Button fx:id="addbtn" layoutX="210.0" layoutY="104.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Add" textFill="WHITE" />
+      <Button fx:id="deletebtn" layoutX="392.0" layoutY="104.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #722f37;" styleClass="btn" text="Delete" textFill="WHITE" />
+      <Button fx:id="modifybtn" layoutX="302.0" layoutY="104.0" mnemonicParsing="false" onAction="#onModify" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Modify" textFill="WHITE" />
+      <Pane layoutX="537.0" layoutY="22.0" prefHeight="108.0" prefWidth="168.0" style="-fx-background-color: #0D7377;" styleClass="statsPane">
          <children>
             <Text fx:id="nbA" fill="WHITE" layoutX="70.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="10" wrappingWidth="33.336669921875">
                <font>
@@ -38,5 +37,7 @@
             </Text>
          </children>
       </Pane>
+      <ComboBox fx:id="combo1" layoutX="191.0" layoutY="64.0" prefWidth="150.0" promptText="Client ID" />
+      <ComboBox fx:id="combo2" layoutX="366.0" layoutY="64.0" prefWidth="150.0" promptText="Flight ID" />
    </children>
 </AnchorPane>
