--- a/src/main/resources/com/example/airlinecompanymanagment/Client.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Client.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -42,7 +43,7 @@
          </children>
       </Pane>
       <TextField fx:id="lastnameInput" layoutX="275.0" layoutY="23.0" promptText="Last Name" />
-      <TextField fx:id="birthInput" layoutX="443.0" layoutY="23.0" promptText="Birth date" />
       <TextField fx:id="emailInput" layoutX="443.0" layoutY="63.0" promptText="Email" />
+      <DatePicker fx:id="birthInput" layoutX="442.0" layoutY="23.0" prefHeight="26.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
