--- a/src/main/resources/com/example/airlinecompanymanagment/Employees.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Employees.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -45,9 +46,9 @@
          </children>
       </Pane>
       <TextField fx:id="lastnameInput" layoutX="192.0" layoutY="23.0" promptText="Last Name" />
-      <TextField fx:id="birthInput" layoutX="360.0" layoutY="23.0" promptText="Birth date" />
       <TextField fx:id="emailInput" layoutX="360.0" layoutY="63.0" promptText="Email" />
       <TextField fx:id="salaryInput" layoutX="524.0" layoutY="64.0" promptText="Salary" />
       <ComboBox fx:id="combo" layoutX="523.0" layoutY="23.0" prefWidth="150.0" promptText="Department ID" />
+      <DatePicker fx:id="birthInput" layoutX="359.0" layoutY="22.0" prefHeight="26.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
