--- a/src/main/resources/com/example/airlinecompanymanagment/Flight.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Flight.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -12,19 +14,21 @@
 
 <AnchorPane prefHeight="711.0" prefWidth="959.0" style="-fx-background-color: #212121;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.airlinecompanymanagment.controllers.FlightController">
    <children>
-      <TableView fx:id="tab" layoutX="88.0" layoutY="156.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="542.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
+      <TableView fx:id="tab" layoutX="74.0" layoutY="186.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="726.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
          <columns>
-            <TableColumn fx:id="datedepartcol" prefWidth="111.199951171875" text="Date departure" />
-            <TableColumn fx:id="datearrivalcol" prefWidth="112.79998779296875" text="Date arrival" />
-            <TableColumn fx:id="destinationcol" prefWidth="110.39997863769531" text="Destination" />
-            <TableColumn fx:id="airportcol" prefWidth="111.20001220703125" text="Airport" />
-            <TableColumn fx:id="airplanecol" prefWidth="94.39999999999998" text="Airplane" />
+            <TableColumn fx:id="datedepartcol" prefWidth="115.99996948242188" text="Date departure" />
+            <TableColumn fx:id="datearrivalcol" prefWidth="119.20005798339844" text="Date arrival" />
+            <TableColumn fx:id="departtimecol" prefWidth="118.39996337890625" text="Departure Time" />
+            <TableColumn fx:id="arrivaltimecol" prefWidth="132.0" text="Arrival Time" />
+            <TableColumn fx:id="destinationcol" prefWidth="104.0" text="Destination" />
+            <TableColumn fx:id="airportcol" prefWidth="67.99993896484375" text="Airport" />
+            <TableColumn fx:id="airplanecol" prefWidth="70.39990234375" text="Airplane" />
          </columns>
       </TableView>
-      <TextField fx:id="departinput" layoutX="100.0" layoutY="25.0" promptText="Date Departure" />
-      <Button fx:id="addbtn" layoutX="218.0" layoutY="102.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Add" textFill="WHITE" />
-      <Button fx:id="deletebtn" layoutX="400.0" layoutY="102.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #722f37;" styleClass="btn" text="Delete" textFill="WHITE" />
-      <Button fx:id="modifybtn" layoutX="310.0" layoutY="102.0" mnemonicParsing="false" onAction="#onModify" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Modify" textFill="WHITE" />
+      <TextField fx:id="departtempsinput" layoutX="181.0" layoutY="55.0" promptText="Departure Time" />
+      <Button fx:id="addbtn" layoutX="218.0" layoutY="130.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Add" textFill="WHITE" />
+      <Button fx:id="deletebtn" layoutX="400.0" layoutY="130.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #722f37;" styleClass="btn" text="Delete" textFill="WHITE" />
+      <Button fx:id="modifybtn" layoutX="310.0" layoutY="130.0" mnemonicParsing="false" onAction="#onModify" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Modify" textFill="WHITE" />
       <Pane layoutX="600.0" layoutY="22.0" prefHeight="108.0" prefWidth="168.0" style="-fx-background-color: #0D7377;" styleClass="statsPane">
          <children>
             <Text fx:id="nbA" fill="WHITE" layoutX="70.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="10" wrappingWidth="33.336669921875">
@@ -39,9 +43,21 @@
             </Text>
          </children>
       </Pane>
-      <TextField fx:id="arrivalinput" layoutX="266.0" layoutY="25.0" promptText="Date Arrival" />
-      <TextField fx:id="destinationinput" layoutX="428.0" layoutY="25.0" promptText="Destination" />
-      <ComboBox fx:id="combo1" layoutX="191.0" layoutY="64.0" prefWidth="150.0" promptText="Airport ID" />
-      <ComboBox fx:id="combo2" layoutX="368.0" layoutY="64.0" prefWidth="150.0" promptText="Airplane ID" />
+      <TextField fx:id="arrivaltempsinput" layoutX="417.0" layoutY="50.0" promptText="Arrival Time" />
+      <TextField fx:id="destinationinput" layoutX="88.0" layoutY="97.0" promptText="Destination" />
+      <ComboBox fx:id="combo1" layoutX="250.0" layoutY="97.0" prefWidth="150.0" promptText="Airport ID" />
+      <ComboBox fx:id="combo2" layoutX="416.0" layoutY="97.0" prefWidth="150.0" promptText="Airplane ID" />
+      <DatePicker fx:id="departinput" layoutX="180.0" layoutY="19.0" prefHeight="26.0" prefWidth="150.0" />
+      <DatePicker fx:id="arrivalinput" layoutX="416.0" layoutY="14.0" prefHeight="26.0" prefWidth="150.0" />
+      <Label layoutX="343.0" layoutY="23.0" text="Arrival Date" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="86.0" layoutY="23.0" text="Departure Date" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
