Modified foreign keys to show names + more validation

--- a/src/main/resources/com/example/airlinecompanymanagment/Ticket.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Ticket.fxml
@@ -37,7 +37,7 @@
             </Text>
          </children>
       </Pane>
-      <ComboBox fx:id="combo1" layoutX="191.0" layoutY="64.0" prefWidth="150.0" promptText="Client ID" />
-      <ComboBox fx:id="combo2" layoutX="366.0" layoutY="64.0" prefWidth="150.0" promptText="Flight ID" />
+      <ComboBox fx:id="combo1" layoutX="191.0" layoutY="64.0" prefWidth="150.0" promptText="Client Passport" />
+      <ComboBox fx:id="combo2" layoutX="366.0" layoutY="64.0" prefWidth="150.0" promptText="Flight" />
    </children>
 </AnchorPane>
