--- a/src/main/resources/com/example/airlinecompanymanagment/Client.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Client.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -12,23 +13,24 @@
 
 <AnchorPane prefHeight="711.0" prefWidth="959.0" style="-fx-background-color: #212121;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.airlinecompanymanagment.controllers.ClientController">
    <children>
-      <TableView fx:id="tab" layoutX="97.0" layoutY="156.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="697.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
+      <TableView fx:id="tab" layoutX="85.0" layoutY="156.0" onMouseClicked="#OnSet" prefHeight="200.0" prefWidth="779.0" style="-fx-background-color: #323232; -fx-border-color: #14FFEC;">
          <columns>
-            <TableColumn fx:id="firstnamecol" prefWidth="100.79998397827148" text="First Name" />
-            <TableColumn fx:id="lastnamecol" prefWidth="104.0" text="Last Name" />
-            <TableColumn fx:id="addresscol" prefWidth="118.39997863769531" text="Address" />
-            <TableColumn fx:id="phonecol" prefWidth="123.20001220703125" text="Phone" />
-            <TableColumn fx:id="emailcol" prefWidth="121.60003662109375" text="Email" />
-            <TableColumn fx:id="birthcol" prefWidth="123.20001220703125" text="Birth date" />
+            <TableColumn fx:id="passportcol" prefWidth="87.19998168945312" text="Passport N°" />
+            <TableColumn fx:id="firstnamecol" prefWidth="111.19999694824219" text="First Name" />
+            <TableColumn fx:id="lastnamecol" prefWidth="105.5999755859375" text="Last Name" />
+            <TableColumn fx:id="addresscol" prefWidth="118.4000244140625" text="Address" />
+            <TableColumn fx:id="phonecol" prefWidth="124.0" text="Phone" />
+            <TableColumn fx:id="emailcol" prefWidth="121.5999755859375" text="Email" />
+            <TableColumn fx:id="birthcol" prefWidth="111.199951171875" text="Birth date" />
          </columns>
       </TableView>
-      <TextField fx:id="firstnameInput" layoutX="109.0" layoutY="23.0" promptText="First Name" />
-      <TextField fx:id="addressInput" layoutX="109.0" layoutY="63.0" promptText="Address" />
-      <TextField fx:id="phoneInput" layoutX="276.0" layoutY="63.0" promptText="Phone" />
+      <TextField fx:id="firstnameInput" layoutX="216.0" layoutY="23.0" promptText="First Name" />
+      <TextField fx:id="addressInput" layoutX="151.0" layoutY="62.0" promptText="Address" />
+      <TextField fx:id="phoneInput" layoutX="318.0" layoutY="62.0" promptText="Phone" />
       <Button fx:id="addbtn" layoutX="228.0" layoutY="103.0" mnemonicParsing="false" onAction="#onAdd" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Add" textFill="WHITE" />
       <Button fx:id="deletebtn" layoutX="410.0" layoutY="103.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #722f37;" styleClass="btn" text="Delete" textFill="WHITE" />
       <Button fx:id="modifybtn" layoutX="320.0" layoutY="103.0" mnemonicParsing="false" onAction="#onModify" prefHeight="38.0" prefWidth="64.0" style="-fx-background-color: #0D7377;" styleClass="btn" text="Modify" textFill="WHITE" />
-      <Pane layoutX="619.0" layoutY="22.0" prefHeight="98.0" prefWidth="150.0" style="-fx-background-color: #0D7377;" styleClass="statsPane">
+      <Pane layoutX="718.0" layoutY="26.0" prefHeight="98.0" prefWidth="150.0" style="-fx-background-color: #0D7377;" styleClass="statsPane">
          <children>
             <Text fx:id="nbC" fill="WHITE" layoutX="60.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="10" wrappingWidth="33.336669921875">
                <font>
@@ -42,8 +44,10 @@
             </Text>
          </children>
       </Pane>
-      <TextField fx:id="lastnameInput" layoutX="275.0" layoutY="23.0" promptText="Last Name" />
-      <TextField fx:id="emailInput" layoutX="443.0" layoutY="63.0" promptText="Email" />
-      <DatePicker fx:id="birthInput" layoutX="442.0" layoutY="23.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="lastnameInput" layoutX="382.0" layoutY="23.0" promptText="Last Name" />
+      <TextField fx:id="emailInput" layoutX="485.0" layoutY="62.0" promptText="Email" />
+      <DatePicker fx:id="birthInput" layoutX="549.0" layoutY="23.0" prefHeight="26.0" prefWidth="150.0" />
+      <Label layoutX="550.0" layoutY="5.0" text="Birth date" textFill="WHITE" />
+      <TextField fx:id="passportinput" layoutX="96.0" layoutY="25.0" prefHeight="26.0" prefWidth="109.0" promptText="Passport N°" />
    </children>
 </AnchorPane>
