--- a/src/main/resources/com/example/airlinecompanymanagment/Employees.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Employees.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -21,7 +22,7 @@
             <TableColumn fx:id="phonecol" prefWidth="123.20001220703125" text="Phone" />
             <TableColumn fx:id="emailcol" prefWidth="121.60003662109375" text="Email" />
             <TableColumn fx:id="birthcol" prefWidth="108.800048828125" text="Birth date" />
-            <TableColumn fx:id="departmentcol" prefWidth="90.39996337890625" text="Department ID" />
+            <TableColumn fx:id="departmentcol" prefWidth="90.39996337890625" text="Department" />
             <TableColumn fx:id="salarycol" prefWidth="75.0" text="Salary" />
          </columns>
       </TableView>
@@ -48,7 +49,8 @@
       <TextField fx:id="lastnameInput" layoutX="192.0" layoutY="23.0" promptText="Last Name" />
       <TextField fx:id="emailInput" layoutX="360.0" layoutY="63.0" promptText="Email" />
       <TextField fx:id="salaryInput" layoutX="524.0" layoutY="64.0" promptText="Salary" />
-      <ComboBox fx:id="combo" layoutX="523.0" layoutY="23.0" prefWidth="150.0" promptText="Department ID" />
+      <ComboBox fx:id="combo" layoutX="523.0" layoutY="23.0" prefWidth="150.0" promptText="Department" />
       <DatePicker fx:id="birthInput" layoutX="359.0" layoutY="22.0" prefHeight="26.0" prefWidth="150.0" />
+      <Label layoutX="360.0" layoutY="5.0" text="Birth date" textFill="WHITE" />
    </children>
 </AnchorPane>
