--- a/src/main/resources/com/example/airlinecompanymanagment/Flight.fxml
+++ b/src/main/resources/com/example/airlinecompanymanagment/Flight.fxml
@@ -43,12 +43,12 @@
             </Text>
          </children>
       </Pane>
-      <TextField fx:id="arrivaltempsinput" layoutX="417.0" layoutY="50.0" promptText="Arrival Time" />
+      <TextField fx:id="arrivaltempsinput" layoutX="417.0" layoutY="52.0" promptText="Arrival Time" />
       <TextField fx:id="destinationinput" layoutX="88.0" layoutY="97.0" promptText="Destination" />
-      <ComboBox fx:id="combo1" layoutX="250.0" layoutY="97.0" prefWidth="150.0" promptText="Airport ID" />
-      <ComboBox fx:id="combo2" layoutX="416.0" layoutY="97.0" prefWidth="150.0" promptText="Airplane ID" />
+      <ComboBox fx:id="combo1" layoutX="250.0" layoutY="97.0" prefWidth="150.0" promptText="Airport" />
+      <ComboBox fx:id="combo2" layoutX="416.0" layoutY="97.0" prefWidth="150.0" promptText="Airplane" />
       <DatePicker fx:id="departinput" layoutX="180.0" layoutY="19.0" prefHeight="26.0" prefWidth="150.0" />
-      <DatePicker fx:id="arrivalinput" layoutX="416.0" layoutY="14.0" prefHeight="26.0" prefWidth="150.0" />
+      <DatePicker fx:id="arrivalinput" layoutX="416.0" layoutY="16.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="343.0" layoutY="23.0" text="Arrival Date" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
